--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,106 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Philosopher:wght@700&family=Roboto&display=swap');
+
+*{
+    box-sizing: border-box;
+}
+.orange-star{
+    color: orange;
+}
+.menu{
+text-align: center;
+}
+.menu-title{
+    font-family: 'Roboto',sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    color: #DC780B;
+    margin-bottom: 9px;
+}
+.menu-subtitle{
+    font-family: 'Philosopher',sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 24px;
+    align-items: center;
+}
+.menu-desc{
+    font-family: 'Roboto',sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    color: #150C01;
+    opacity: 0.7;
+    width: 678px;
+    margin: 0 auto;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+}
+.col-4{
+    width: 33.3333%;
+    padding: 0 15px;
+}
+.container{
+    max-width: 1100px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+.box-food{
+    border: 1px solid rgba(210, 93, 93, 0.5);
+    margin-bottom: 20px;
+    border-radius: 75px 10px 10px 10px;
+}
+.box--price-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.food-img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 75px 10px 75px 10px;
+
+}
+.price{
+    text-align: right;
+}
+
+.title{
+    font-family: 'Philosopher',sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 24px;
+    align-items: center;
+}
+.desc{
+    width: 310px;
+    align-items: center;
+    font-family: 'Roboto',sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+
+}
+.box-info{
+    padding: 10px;
+}
+.rating{
+    text-align: right;
+}
+.box-dishes{
+    margin-top: 21px;
 }
