--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ text-align: center;
     line-height: 24px;
     letter-spacing: 0.2em;
     text-transform: uppercase;
-    color: #DC780B;
+    color: orange;
     margin-bottom: 9px;
 }
 .menu-subtitle{
